# img2sdf

./: .gitignore  CMakeLists.txt  JumpFloodResources.cpp  JumpFloodResources.h  LICENSE  README.md  WICTextureLoader.cpp  WICTextureWriter.cpp  WICTextureWriter.h  dxinit.cpp  dxinit.h  dxutils.cpp  dxutils.h  jumpflood.hlsl  library.cpp  library.h  preprocess.hlsl  shader_globals.h
src/: CMakeLists.txt  JumpFloodDispatch.cpp  JumpFloodDispatch.h  JumpFloodResources.cpp  JumpFloodResources.h  Profiler.cpp  Profiler.h  WICTextureLoader.h  WICTextureWriter.cpp  WICTextureWriter.h  dxinit.cpp  dxinit.h  dxutils.cpp  dxutils.h  img2sdf.cpp  img2sdf.h  jumpflooderror.cpp  jumpflooderror.h  library.cpp  library.h  program.cpp  program.h  shader_globals.h
src/shaders/: common.hlsi  composite.hlsl  distance.hlsl  invert.hlsl  jumpflood.hlsl  minmax_reduce.hlsl  minmaxreduce.hlsl  minmaxreduce_firstpass.hlsl  normalise.hlsl  preprocess.hlsl  threadgroup_reduce.hlsi  utils.hlsi  voronoi_normalise.hlsl
src/tools/: CMakeLists.txt  profile.cpp  program.cpp  program.h
tests/: img2sdf_test.cpp  minmax_test.cpp
